# salix

./: .gitignore  README.md
demos/discovery/: Makefile  spec.rst
demos/discovery/include/rosgraph/: rosgraph.h  rosnode.h
demos/discovery/src/: main.c
demos/zeromq_protobufc/: CMakeLists.txt  Makefile
demos/zeromq_protobufc/msgs/: string_stamped.proto  time.proto
demos/zeromq_protobufc/src/: listener.c  talker.c
prototype/python-ros2/: pub.py
prototype/python-ros2/src/ros2/: node.py
prototype/python-ros2/src/ros2_std_msgs/messages/: __init__.py
prototype/ros_discovery/src/ros_discovery/: graph.py  node.py
prototypes/python-ros2/: env.py
prototypes/python-ros2/src/ros2/: __init__.py  publisher.py  utilities.py
prototypes/python-ros2/src/ros2_std_msgs/messages/: string.py
prototypes/ros_discovery/: distributed_node.py  example.py
prototypes/ros_discovery/src/ros_discovery/impl/: distributed.py
prototypes/ros_discovery/src/ros_discovery/msgs/: advertise.py  header.py
